--- a/projects/mfe-basket/src/app/basket/basket.component.html
+++ b/projects/mfe-basket/src/app/basket/basket.component.html
@@ -33,8 +33,8 @@
 </div> -->
 
 
-
-<div class="flex h-56">
+<!-- /////emp///// -->
+<!-- <div class="flex h-56">
     <div class="flex-none w-48 relative">
         <img src="assets/avatar.png" alt="{{this.items?.name}}"
             class="absolute inset-0 w-full h-full object-cover rounded-l-lg" />
@@ -55,4 +55,51 @@
             Manager: {{this.items?.manager}}
         </p>
     </div>
-</div>
+</div> -->
+
+
+<!-- //crud -->
+
+<div class="container">
+    <div class="col-md-12 m-auto">
+      <form [formGroup]="addForm">
+        <div class="form-group">
+          <label for="eid">Employee No:</label>
+          <input type="text" id="eid" class="form-control" formControlName="id" name="id"
+            placeholder="Employee No">
+        </div>
+        <div class="form-group">
+          <label for="name">Employee Name:</label>
+          <input type="text" id="name" class="form-control" formControlName="name"
+            name="name" placeholder="Employee Name">
+        </div>
+        <div class="form-group">
+          <label for="description">Department:</label>
+          <input type="text" id="description" class="form-control" formControlName="description"
+            name="description" placeholder="Department">
+        </div>
+        <div class="form-group">
+          <label for="designation">Designation:</label>
+          <input type="text" id="designation" class="form-control"
+            formControlName="designation" name="designation" placeholder="Designation">
+        </div>
+        <div class="form-group">
+          <label for="manager">Manager:</label>
+          <input type="text" id="manager" class="form-control" formControlName="manager"
+            name="manager" placeholder="Manager">
+        </div>
+        <div class="form-group">
+          <label for="project">Project:</label>
+          <input type="text" id="project" class="form-control" formControlName="project"
+            name="project" placeholder="Project">
+        </div>
+        <div class="form-group">
+          <label for="id">Employee Id:</label>
+          <input type="text" class="form-control" id="id" formControlName="empId"
+            name="empId" placeholder="Employee Id"/>
+        </div>
+        <button (click)="addEmp()" [disabled]="addForm.invalid"
+          class="btn mt-4 btn-outline-success btn-sm">{{this?.basketService?.selectedData ? 'Update' : 'Save'}}</button>
+      </form>
+    </div>
+  </div>
