fourth commit of Mfe and ngrx store

--- a/projects/mfe-basket/src/app/home/home.component.html
+++ b/projects/mfe-basket/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-<p>
-    There's nothing to see here. 👀 <br/>
-    The MFE is this way ➡️ <a routerLink="/basket">Cupcake Basket</a>
+<p style="margin: 30px;">
+    <a routerLink="/basket">Go to Employee page</a>
 </p>
