--- a/projects/shell/src/app/app.component.html
+++ b/projects/shell/src/app/app.component.html
@@ -2,7 +2,7 @@
 <header class="p-4 mx-4 flex flex-row justify-between items-center">
   <div class="flex flex-row items-center">
     <img class="w-14">
-    <h1 class="text-4xl ml-3 text-cyan-500">Employee Details</h1>
+    <h1 class="text-4xl ml-3 text-cyan-500">Emp App</h1>
   </div>
   <div class="text-l inline-flex justify-end items-center text-slate-700">
     <nav>
