--- a/projects/mfe-basket/src/app/app.component.html
+++ b/projects/mfe-basket/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1>Hey there! You're viewing the Basket MFE project! 🎉</h1>
+<!-- <h1>Hey there! You're viewing the Basket MFE project! 🎉</h1> -->
 
 <router-outlet></router-outlet>
