--- a/projects/mfe-profile/src/app/home/home.component.html
+++ b/projects/mfe-profile/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-<p>
-    There's nothing to see here. 👀 <br/>
-    The MFE is this way ➡️ <a routerLink="/profile">Profile</a>
+<p style="margin: 30px;">
+    <a routerLink="/profile">Go to login page</a>
 </p>
