--- a/projects/mfe-profile/src/app/profile/profile.component.html
+++ b/projects/mfe-profile/src/app/profile/profile.component.html
@@ -33,7 +33,10 @@
 </div> -->
 
 
-<div class="container">
+<div class="container" style="margin-top: 40px;">
+    <div style="text-align: center;">
+        <h3><b>Login Form</b></h3>
+    </div>
     <div class="col-md-12 m-auto">
         <form [formGroup]="loginForm" (ngSubmit)="loginSubmit($event)" novalidate>
             <div class="form-group">
@@ -58,7 +61,8 @@
                     Please enter password
                 </small>
                 <small style="color: rgb(252, 98, 98);"
-                    *ngIf="loginForm.controls.password.touched && loginForm.controls.password.invalid && !loginForm.controls.password.errors?.required">Note: The
+                    *ngIf="loginForm.controls.password.touched && loginForm.controls.password.invalid && !loginForm.controls.password.errors?.required">Note:
+                    The
                     password must contain at least 1 number, special character and 1 uppercase and lowercase letter,
                     and at least 8 or more characters</small>
             </div>
