--- a/projects/shell/src/app/products/products.component.html
+++ b/projects/shell/src/app/products/products.component.html
@@ -1,4 +1,4 @@
-<p class="text-center text-3xl mb-7 text-pink-500">Click Employee to see details</p>
+<p class="text-center text-3xl mb-7 text-pink-500"></p>
 <div class="flex flex-wrap gap-6">
     <app-product *ngFor="let p of basketService?.products" [product]="p" (purchase)="openEmployee($event)"></app-product>
 </div>
