--- a/projects/mfe-basket/src/app/basket/basket.component.html
+++ b/projects/mfe-basket/src/app/basket/basket.component.html
@@ -68,7 +68,7 @@
     <form [formGroup]="addForm">
       <div class="form-group">
         <label for="eid">Employee No:</label>
-        <input type="text" id="eid" class="form-control" formControlName="id" name="id" placeholder="Employee No">
+        <input type="number" id="eid" class="form-control" formControlName="id" name="id" placeholder="Employee No">
       </div>
       <div class="form-group">
         <label for="name">Employee Name:</label>
